# ChangeLog for sci-geosciences/osm2pgsql
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osm2pgsql/ChangeLog,v 1.18 2015/04/18 12:30:41 swegener Exp $

  18 Apr 2015; Sven Wegener <swegener@gentoo.org> osm2pgsql-0.84.0.ebuild,
  osm2pgsql-0.86.0.ebuild, osm2pgsql-0.87.0.ebuild:
  Rename distfile to include package name.

*osm2pgsql-0.87.0 (25 Mar 2015)

  25 Mar 2015; Patrick Lauer <patrick@gentoo.org> +osm2pgsql-0.87.0.ebuild:
  Bump

  28 Dec 2014; Aaron W. Swenson <titanofold@gentoo.org>
  osm2pgsql-0.84.0.ebuild, osm2pgsql-0.86.0.ebuild, osm2pgsql-99999999.ebuild:
  Rename virtual/postgresql to dev-db/postgresql

*osm2pgsql-0.86.0 (10 Nov 2014)

  10 Nov 2014; Patrick Lauer <patrick@gentoo.org> +osm2pgsql-0.86.0.ebuild:
  Bump

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org>
  osm2pgsql-0.84.0.ebuild, osm2pgsql-99999999.ebuild:
  Update PostgreSQL dependencies and/or checks to virtual/postgresql.

  28 May 2014; Aaron W. Swenson <titanofold@gentoo.org>
  -osm2pgsql-20100413.ebuild:
  Remove outdated version. Fixes bug 510676.

*osm2pgsql-0.84.0 (29 Jan 2014)

  29 Jan 2014; Aaron W. Swenson <titanofold@gentoo.org>
  +osm2pgsql-0.84.0.ebuild, osm2pgsql-99999999.ebuild, metadata.xml:
  Fix bug 421325: Fixed by version bump
  Fix bug 427668: Thanks Christoph Brill
  Fix bug 469374: Added lua USE flag
  Fix bug 397877: Fixed by version bump
  Fix bug 490788: Fixed by version bump

  12 Apr 2013; Sven Wegener <swegener@gentoo.org> osm2pgsql-99999999.ebuild,
  metadata.xml:
  Move live ebuild from subversion to git, bug #464820 by rubik's cube and
  Jeroen Roovers.

  24 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> osm2pgsql-99999999.ebuild:
  Fix dodoc crash.

  27 Feb 2012; Tupone Alfredo <tupone@gentoo.org> metadata.xml:
  Removing me as a maintainer

  27 Nov 2011; Sven Wegener <swegener@gentoo.org> osm2pgsql-20100413.ebuild,
  osm2pgsql-99999999.ebuild: