@@ -1,14 +1,14 @@
 DEFINED_PHASES=prepare
-DEPEND=app-arch/bzip2 dev-db/postgresql dev-libs/libxml2:2 dev-libs/boost sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua ) pbf? ( dev-libs/protobuf-c ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=app-arch/bzip2 dev-db/postgresql:= dev-libs/libxml2:2 dev-libs/boost sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua:= ) pbf? ( dev-libs/protobuf-c ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Converts OSM data to SQL and insert into PostgreSQL db
 EAPI=5
 HOMEPAGE=http://wiki.openstreetmap.org/wiki/Osm2pgsql
 IUSE=+lua +pbf
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=app-arch/bzip2 dev-db/postgresql dev-libs/libxml2:2 dev-libs/boost sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua ) pbf? ( dev-libs/protobuf-c )
+RDEPEND=app-arch/bzip2 dev-db/postgresql:= dev-libs/libxml2:2 dev-libs/boost sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua:= ) pbf? ( dev-libs/protobuf-c )
 RESTRICT=test
 SLOT=0
 SRC_URI=https://github.com/openstreetmap/osm2pgsql/archive/0.87.0.tar.gz -> osm2pgsql-0.87.0.tar.gz
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=5555c6e2eb51cb05ceaa0a91ad10992b
+_md5_=2983e6d08a0675968a824b19f4064aa0
