@@ -1,11 +1,11 @@
 DEFINED_PHASES=unpack
-DEPEND=app-arch/bzip2 dev-db/postgresql dev-libs/libxml2:2 sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua ) pbf? ( dev-libs/protobuf-c ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 dev-vcs/git
+DEPEND=app-arch/bzip2 dev-db/postgresql:= dev-libs/boost dev-libs/libxml2:2 sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua:= ) pbf? ( dev-libs/protobuf-c ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 dev-vcs/git
 DESCRIPTION=Converts OSM planet.osm data to a PostgreSQL/PostGIS database
 EAPI=5
 HOMEPAGE=http://wiki.openstreetmap.org/wiki/Osm2pgsql
 IUSE=+lua +pbf
 LICENSE=GPL-2
-RDEPEND=app-arch/bzip2 dev-db/postgresql dev-libs/libxml2:2 sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua ) pbf? ( dev-libs/protobuf-c )
+RDEPEND=app-arch/bzip2 dev-db/postgresql:= dev-libs/boost dev-libs/libxml2:2 sci-libs/geos sci-libs/proj sys-libs/zlib lua? ( dev-lang/lua:= ) pbf? ( dev-libs/protobuf-c )
 SLOT=0
 _eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	git-2	e28f0d8a9b321431b1e699782851b827	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=8843421b34238b64e1cb37b0ffe4f3bd
+_md5_=1e855c2c2d02ff7384c6dffd2156961e
