@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare test
+DEPEND=sys-apps/sed
+DESCRIPTION=LD_PRELOAD hack to convert sync()/msync() and the like to NO-OP
+EAPI=5
+HOMEPAGE=https://launchpad.net/libeatmydata/
+IUSE=abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32 abi_ppc_32 abi_ppc_64 abi_s390_32 abi_s390_64
+KEYWORDS=~x86 ~amd64
+LICENSE=GPL-3
+RESTRICT=test
+SLOT=0
+SRC_URI=https://launchpad.net/libeatmydata/trunk/libeatmydata-82/+download/libeatmydata-82.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	autotools-multilib	037c4046d25f29e78dd44dccabd5d66b	autotools-utils	3727db64c7b960903d5033280f108080	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multilib-build	0983c7893df461213a05f791cc7dea6d	multilib-minimal	13dd976916c35a1e2c8d170e840c7018	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=58cac677d76c2dc4669b2827de448b24
