@@ -4,16 +4,16 @@ Hash: SHA256
 DIST osm2pgsql-0.84.0.tar.gz 1037670 SHA256 cc0a2c4c677833c4c2c0c00a35ed25ad8ee4e378ad0ab834f151aaee5e7f6f85 SHA512 f706c57ecc63382db7f031f5c16ce94949340aa96bf45c85e71e8c5fcafda0756e91673369fa46e1217733dd8aa12a24cf1260362995d1c9dce258242704f42d WHIRLPOOL 49c1be45844693262108d31e23249e41eda2da7319e93b0c9739d8c5d61c035e7e75ea5182e04e3ddc3063cc248865751da8a55651e2c94e1d8a0797eeb68f4e
 DIST osm2pgsql-0.86.0.tar.gz 2101740 SHA256 6599366c562a7ed6b2c92dffc3ebfb4f6917c7216a2f0d01f154b01549525140 SHA512 f16f67c97b771d58df124aa99b1f414f379f293580451dbb288c460814a5b11a5e3c607d9623cc8e9705117a204425af3599498f9358f2efbcd1c408215fe7f0 WHIRLPOOL 437e0ed9923a07a6d9c507c6442b47cf1d1affa9921b2c8d4b36441c03df6577fee18596204928f4bbc291e8c7e6f9cd1e3f6c19e5d0ab65a5e366f1354d47f2
 DIST osm2pgsql-0.87.0.tar.gz 2139841 SHA256 6f5538d098e17a578a384f70f61b335f10edb04114d5cdc5233ca97f868ad0f6 SHA512 f3dd88b6f89c7ecbadf3ad65d548ba0430726bf3c11b5a32c214dddb74f6f7371fd10d712fed965045605749b80d796fc67e4a4d085ffca11310140161059381 WHIRLPOOL 67ef36defd4f0fbbb16ab561790fc4b5abff715e315c83db15735fc11c21069c44d48687dddaba7edd5476f71fe9ce54485e3c8b2279fe7348ee929868233997
-EBUILD osm2pgsql-0.84.0.ebuild 754 SHA256 42ac35717d1879501a67422e27184f15b966efdd8879f8748a89ff0030e9007b SHA512 bd96d6353fe7a15de81a3822300114b86ff2ab27879681110ed6290ebb4d1c0a44abad56be69f48ce15b6fb20ee870802e72d775aa089e6b753000098aef5ae7 WHIRLPOOL fccce8a06432763b16ace734f94cc58f75a7ba3e20a54421f6147824d6fe62feae3c16bd02b6f503967e24cbf9988934411ef7847d5f2f41e26c6db984c631c8
-EBUILD osm2pgsql-0.86.0.ebuild 754 SHA256 56fc10ae8ccbbcea628075abafe9843d1b9823652b5447cea1a4741691a47f28 SHA512 99c985ef925bbf04403c20953189e71a665c3203dfcc02ef4ae8616504b1ea060454eb7f5f90f7d1a8eea975ac82ea1b03f887429216dc312197c584c20e4c53 WHIRLPOOL 0c3a26745984fb19edd39cac5bfb61cfb7ab3ea5de132997e23fe94d82d879589a244ed1799d4a1f63c469c3bdd7e4162b6fd5dd02598107d52fc208b6e0faa7
-EBUILD osm2pgsql-0.87.0.ebuild 853 SHA256 5637e28e7c7feb4fac34f3fcd82f535ea387c8fbfc8ba10dc6e5c12fe14a2fd9 SHA512 1dae38ab0b1b7f0c752f7609abbd1868d8aed162fd2c059df668a77ee9acea1f2e366d013f87b072808b8bd5f30f356eee370b71fcb89980dfb1f64da6d10bb3 WHIRLPOOL 0bc53075b63b262f9e302b732ddc79c5300fe29cf6d0556f491b417645fde720fa148277d1da8a62dbb90844aee8dadc562daed929d6671db18b585a419d77a5
-EBUILD osm2pgsql-99999999.ebuild 746 SHA256 54bd859b9a7aa0c2005d0ca88acbbe6e62cb6438d445ba1cf7f87ec96031719d SHA512 5b3e015cac89e1a28d3a3ff69091de16e8a515e1e1bfc18ddb092e710471bbc20d90c75e346a2f8a79be377ae523d01462c4d6936469f6990c2c2fa5f32ac3e3 WHIRLPOOL 4328900fce3e5bdb44e1a1502985dbf9c9f1f5d7a4d889d8a0a69a27009966cce06bc8fb83745598047b29691daa6b4a80a160bc14a0a670f8517bfef76613ef
-MISC ChangeLog 3250 SHA256 65257b0fec8e09599e47f309714222cc415c602739b01021f38c0cc24197011d SHA512 e61a2f37a55071eac6fefb8a3a851caec08c624502995c0655d52fa4f591ef40e1fc9c7c4f2197b0dbab6040245eece06af76cc4e0f1c407793daac99d9b5c4b WHIRLPOOL d4ae0fafc962341c4161c8fbf029973ba44642982ee852f330894c4b5d428d20a0c495ac0ea36c888b611c4015d5c2030b67858f9e7551ef8d900abd44268ebb
+EBUILD osm2pgsql-0.84.0.ebuild 760 SHA256 d8d4eb21066e9bb1ee54f428f5de5706ae2d9349ff0883a04aa3b932a12409e5 SHA512 2b7d6034e55b94b70c9d51a1c4565adef095faaa8b346888a35e56051030e8c687bdf0670669072a330852837f9c6bf6992ad44578fd44755ffb3046745df499 WHIRLPOOL 5216fa188b58dc73486a1330abb5d855887d3be1de66c637196d617f2001dea9e0610833bfdf1d07a057c40d0b951e2a2b3bac3f96e8098d738ce5b8aede33cc
+EBUILD osm2pgsql-0.86.0.ebuild 760 SHA256 134a13cfc3f5e5b5a7c3368481c5846417a0cb48e674fa017211e28ad1f26c7c SHA512 7c3bff6a4a0dd2c12c916ee5592426163b392a74d8d3b3b498b3e9e7be0433ce9c6ef19b3ec3251acfd35cdfb0c5e2bc8d206707bf3174c546142530c4d28f3b WHIRLPOOL f14d2f2912e7c16d55aa4994cb44f3ab9b2f904b70b6f8e0e3c30aa360fbfc3460c3d1460c9d8a58cf5d62d283488e7af68c4f9a5a7e1dfd42cc8caf229c7005
+EBUILD osm2pgsql-0.87.0.ebuild 859 SHA256 9fae359fd2b4d1ed0bebd778baf8a04abe325dcb83e5f54e3d1e868ece099ecb SHA512 3950d536b85ff18076c68c0f2657f6adceae66506e05ecf423cb3d95673adc6fd514959b035c6d78dbd97ea6726b848aae0a4c4d999516a3eb0b497703f3186f WHIRLPOOL 9ece5f280319846eeb284373e0e00ab9497467d741b435c173a96590256b29251387652c2f4eb5f7661dc494208179ab02417c277f4d33149d006cbf3cb653bd
+EBUILD osm2pgsql-99999999.ebuild 766 SHA256 2ead848c5617c5d6e3c5e22bd2fabd2e191baa069a2ee44eb2464ea982e558b1 SHA512 526aec0c120e25fd21c235951207c7b15dfe88a3eedce54add309134133daeabfe2aee28a61c7ad09615a1d5f3c84a569f6147e6f34b9dc7961d5c4454ec4ed9 WHIRLPOOL f00293185a3ea2b9d7b49e2dc9356f51890ce874311f40e85004b69e43ff1823d8683e2a644939dc6cb0aa50aa5888fc951f87149f8b2809cbd45e6eaebede62
+MISC ChangeLog 3505 SHA256 1565c93a7221aa9c824aeaf95ba02bf90116fdb26f217032ad5d89a5e104bca7 SHA512 0a47c24b9a0e88f772e6c33e7e8470adead5379b48a4ecb67acb06f591aa9608b3ab8c59de1e2f7e487c486ec98cbc588095c7ef2de8e237dbdd0e2eb10d4df7 WHIRLPOOL 3d1fbea711979b5afbbecdc1e78210681326bca429403d52e5a4d20b6368085396e8ac24753a8e039098076e557c6e383120e9e8d84c1e483e034f16e5c3b66e
 MISC metadata.xml 587 SHA256 df04284bc105352816e089fc2483c11d10ded49b95e96d6d5b20ffa1a22810e4 SHA512 cf9d4fcd6f45fbc0c1d1de5d81ad3e0447a54a464246d1f9d3ced8d21f964beaf64a4902679e444523c262e7b7da9c6601e72fd9caad13866765e15aa8721d23 WHIRLPOOL d42cd23ee9474e2a684c99d2b96dd2c983d2f817200fe5148a5efee009c6274f99130f82b6f3ec6b2854d86824d13bc35a34353c582c1fec274e52e5275db333
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUyTnIACgkQI1lqEGTUzySrrgCghaptsSmeJOLRJ4wdFWtgTLfO
-gbcAoNnjza84EhGHJPxmu2fkySDp5NSw
-=0qEw
+iF4EAREIAAYFAlVP02IACgkQVxOqA9G7/aDiKAD/a7gvJyZre2nlzv7f1qS2DDIQ
+kpywpg2fzzUMGmPIdvEA/1/h5/fONquw3YUbDZD63+LY8VSLeZOIrqDBDyK7vhy3
+=vnnG
 -----END PGP SIGNATURE-----
