@@ -4,13 +4,14 @@ Hash: SHA256
 DIST libeatmydata-65.tar.gz 408813 SHA256 8a16c1ff04aeceed1891e2772728359d3368347e1807bed60fc6147d8968d5c1 SHA512 b2e3ed9c67b6ae9b0e5918b114bf0fb6e59dda3bff9b9331a8c280243822d4c77f35e9b08138ea65a74c893cc2bd67677bbf28b03bc61f011b24dd39d171adc2 WHIRLPOOL 51347727497073130ab4ea18d963a8d98c3e950a56c612f0485f205908b1b97f10f6e0afdad2a3d1c448bde2132426fc0a173a6140009a26a3a8db581b13460e
 DIST libeatmydata-82.tar.gz 407977 SHA256 0b675f58069f912727cee5eb75f9ff1a6a8300fe7e3fe4fc6bdd03b7c2c15b29 SHA512 882b2464c26d99ea0b01a2f1171dddb637ac0b3509c18416da4e0199f515ff23c43a7bb5eb641bc3447a2c6be06c261260713565c3e4c4b988995d09f52d623c WHIRLPOOL 5f6decc9e2a8de05379bd16874b2fb8865b52b115686c11cb0d0126b2ace822e0722cf0e2a7810e9f573fb1845dac00db991ecdbef10e98f49a1a5e4a7705153
 EBUILD libeatmydata-65.ebuild 766 SHA256 56f0ccad01ff07728b4a020868b557f96f79b6d796a1ef52b4c677ac7849365e SHA512 8e54829832f9e8782431e7aa88e7fb8414db229d1bc5aa20a691f4419a61a708359597a9dda86b5bec0da72aed5ef3dc39ef2cd3dc3f4df61d5bad6a92858dff WHIRLPOOL 01ba515b403894b21b22301105f205025cc9fdd665b9a22c22aa031f37f3f2db03b2d26ecb40c10922eded82f417265d4a6ddfeff0e581311878afc846e04d03
+EBUILD libeatmydata-82-r1.ebuild 753 SHA256 7334894b835fd647dac40374f171c59caaaaff2f6547244e053381fb4330fb2a SHA512 3bb5cc889691c6c8f9193f4e5eebcc6d25c2d318e6620a36fcd5bebec94e9570e7ec4098af3014959ae67ad4c0fc63fc815cbee405f825fd84bc8d3416700a68 WHIRLPOOL 9d4554d4eff294b00af3462f40e37476f329a3decdf5b481226c421b8c97df220a7a85ab05adc1cfc45bc5f603e450349b66f5fa5ed64a1814ce0cc7e17c5e94
 EBUILD libeatmydata-82.ebuild 755 SHA256 5c24170a2dd932f618518f86699dfe58904c37b3317e165528d1d7439a0935a0 SHA512 e6b4f6e792fda93f6426902be9ef7891b18f694671c5ac8f900b2d2a7c6a1d35a1f4fbca858aaa094278315126a7c7406f4aa4fe0276f328b6ce489461482987 WHIRLPOOL 0b621af7da42164bc1085f81c0b92c9f0840025e87987c83c90728c3614260eb0902b7460880e0440d3aaacb32e9d78f5191b18f4328e0ec7cc9ffb38e7a2fb5
-MISC ChangeLog 672 SHA256 1cbb1c1e984434504e1f3add4a8cdb5912e6a3f6bb9f9e5c1664feb8f68c9fac SHA512 7edcd6ec301cc3f450d5d13624b51742cfe07c285efcad6c25abf9542e59601541b0d60513c4e6b8619c148cb2007e211dd695500b5213e7f9cfb31387106d1a WHIRLPOOL f2826944f2dc05d33d58710ac14cfec51e45f833ea763116b9a02b86163cec83a328f15910dffba038ee1fa77d4002261f1fd88203d57994e696c34d677fc27a
+MISC ChangeLog 849 SHA256 65c7aa9d987b5d006632516055d342cc9ab1dd593cbce77493eed1c268ba79cd SHA512 13acf3bebe112e2e22724205d87d258c020a21f8e7411ef53bd37f261110785148e57326f1b0034c7630994c4aefd2e91a2aa10330f4ed4a79be443650d57770 WHIRLPOOL 168c308c8ea5da9f0b609603ac4839e7daf341fa107a8472230c52c70002c581a1c4111d421aa4886efea7a949103a1b3fee86a7f4dca9619afdd60e0878238a
 MISC metadata.xml 418 SHA256 0c6bc6c9ea92b82db94551664b91213845a8e7b6a156d661a6078079aae4eb64 SHA512 a47a87f4e76d5f4891400a3e88500985fe65fd84991e060809dc55c8e5d7d67f0bf1bea84b85c4d9f5720c25a206b49fc05aa8872b13dfc97714785b377df97e WHIRLPOOL 42ce5ee8789ec4a4e9d832e3aacb1bfdf08c59b1b90753885905e4785ae69fc2fcf8332a6d125c6631f7fcc0c005fbd28e5b0d7f14fe1f62e73a882b4616bad4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.20 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlHn9/0ACgkQcaHudmEf86pMCgCfZGRpgykVn57ZLW4o1cc1zjzD
-GRoAnjnaFDekkXhDI9RoxnQNHjbvgG53
-=d4u6
+iEYEAREIAAYFAlVPz3kACgkQcaHudmEf86ryzACdG9IvMTS/CfUfr9h6jJONM+Vo
+JAcAn1W50eSAgtVsVEOacuyMJ4g1H7K3
+=Q+sq
 -----END PGP SIGNATURE-----
