@@ -1,6 +1,12 @@
 # ChangeLog for sys-fs/libeatmydata
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/libeatmydata/ChangeLog,v 1.2 2013/07/18 14:15:51 slyfox Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/libeatmydata/ChangeLog,v 1.3 2015/05/10 21:39:27 slyfox Exp $
+
+*libeatmydata-82-r1 (10 May 2015)
+
+  10 May 2015; Sergei Trofimovich <slyfox@gentoo.org>
+  +libeatmydata-82-r1.ebuild:
+  Add basic multilib support. Handy to inject into wine.
 
 *libeatmydata-82 (18 Jul 2013)
 
