@@ -1,6 +1,12 @@
 # ChangeLog for sci-geosciences/osm2pgsql
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osm2pgsql/ChangeLog,v 1.18 2015/04/18 12:30:41 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-geosciences/osm2pgsql/ChangeLog,v 1.19 2015/05/10 21:53:28 titanofold Exp $
+
+  10 May 2015; Aaron W. Swenson <titanofold@gentoo.org>
+  osm2pgsql-0.84.0.ebuild, osm2pgsql-0.86.0.ebuild, osm2pgsql-0.87.0.ebuild,
+  osm2pgsql-99999999.ebuild:
+  Fix bug 548862. Add slot operator to dev-db/postgresql and dev-lang/lua
+  dependencies.
 
   18 Apr 2015; Sven Wegener <swegener@gentoo.org> osm2pgsql-0.84.0.ebuild,
   osm2pgsql-0.86.0.ebuild, osm2pgsql-0.87.0.ebuild:
